Updated URL of online portfolio

--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="utf-8">
     <title>Panos Anastasiadis</title>
-    <link rel="canonical" href="https://anastasiadis.me" />
+    <link rel="canonical" href="https://anastasiadis.online" />
     <script>
-      window.location.href = 'https://anastasiadis.me';
+      window.location.href = 'https://anastasiadis.online';
     </script>
   </head>
-  <body>Redirecting to <a href="https://anastasiadis.me" title="Panos Anastasiadis - Portfolio">https://panos.anastasiadis.me</a></body>
+  <body>Redirecting to <a href="https://anastasiadis.online" title="Panos Anastasiadis - Portfolio">https://anastasiadis.online</a></body>
 </html>
