Personal page URL update

--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Panos Anastasiadis</title>
-    <link rel="canonical" href="https://anastasiadis.online" />
+    <title>Panagiotis (Panos) Anastasiadis</title>
+    <link rel="canonical" href="https://anastasiadis.me" />
     <script>
-      window.location.href = 'https://anastasiadis.online';
+      window.location.href = 'https://anastasiadis.me';
     </script>
   </head>
-  <body>Redirecting to <a href="https://anastasiadis.online" title="Panos Anastasiadis - Portfolio">https://anastasiadis.online</a></body>
+  <body>Redirecting to <a href="https://anastasiadis.me" title="Panagiotis (Panos) Anastasiadis - Portfolio">https://anastasiadis.me</a></body>
 </html>
